# app/internal/controller/http/user/dto/transfer.go
@@ -1,11 +1,14 @@
 package dto
 
-import "github.com/gookit/validate"
+import (
+	"balance-service/app/internal/controller/http/httputils"
+	"github.com/gookit/validate"
+)
 
 type TransferBalanceIN struct {
-	ToID        int64  `json:"to_id"       validate:"required|gt:0"`
-	FromID      int64  `json:"from_id"     validate:"required|gt:0"`
-	Amount      int64  `json:"amount"      validate:"required|gt:0"`
+	ToID        uint64 `json:"to_id"       validate:"required|gt:0"`
+	FromID      uint64 `json:"from_id"     validate:"required|gt:0"`
+	Amount      uint64 `json:"amount"      validate:"required|gt:0"`
 	Description string `json:"description" validate:"required"` // |min_len:10
 }
 
@@ -17,4 +20,4 @@ func (t TransferBalanceIN) Validate() error {
 	return nil
 }
 
-type TransferBalanceOUT Status
+type TransferBalanceOUT httputils.Status
